Arrow wrap fix

--- a/sgem-home-equity-loan-calculator/assets/css/hel-cal-calculator.css
+++ b/sgem-home-equity-loan-calculator/assets/css/hel-cal-calculator.css
@@ -754,7 +754,7 @@ details.sgem-hel-details-disclaimer > summary::after {
    background-position: center -2px;   
    background-image: url(../images/drop-down-arrow-hel.svg);
    margin-top: 2px;
-   margin-right: -25px;
+   margin-left: -25px;
    transition: transform 0.3s;
 }
 details.sgem-hel-details-disclaimer[open] > summary::after {
